force-app/main/default/objects/Screening_Committee__c/Screening_Committee__c.object-meta.xml
<CustomObject>
    <label>Screening Committee</label>
    <nameField>
        <label>Screening Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screening Committee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>