force-app/main/default/objects/Screening_Committee__c/fields/Application_Taken_Forward_to_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Taken_Forward_to_Next_Stage__c</fullName>
    <inlineHelpText>Shall this application be taken forward to next stage</inlineHelpText>
    <label>Application Taken Forward to Next Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>May be</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>