force-app/main/default/objects/Screening_Committee__c/fields/Comments_on_the_Application__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_the_Application__c</fullName>
    <label>Comments on the Application</label>
    <type>TextArea</type>
</CustomField>