force-app/main/default/objects/Screening_Committee__c/fields/Grants__c.field-meta.xml
<CustomField>
    <fullName>Grants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grants</label>
    <referenceTo>Grants__c</referenceTo>
    <relationshipLabel>Screening Committee</relationshipLabel>
    <relationshipName>Screening_Committee</relationshipName>
    <type>Lookup</type>
</CustomField>