force-app/main/default/objects/Screening_Committee__c/fields/Name_of_Co_PIs_and_Organization__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Co_PIs_and_Organization__c</fullName>
    <label>Name of Co-PIs and Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>