force-app/main/default/objects/Screening_Committee__c/fields/Name_of_Committee_Member__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Committee_Member__c</fullName>
    <label>Name of Committee Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>